--- a/styles/sass/_home-mq.scss
+++ b/styles/sass/_home-mq.scss
@@ -1,6 +1,6 @@
 // BIG SCREEN
 @media only screen and (min-width: 2440px) {
-  main.bigFontsMain {
+  main.big-fonts-main {
     font-size: calc(2.6rem + 0.32vw);
   }
 }
