--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -31,140 +31,168 @@ body {
   @include tools.giveShadow(1);
 }
 
-.bodyContainer {
+.body-container {
   @include tools.flexing(row, none, flex-start, center);
   width: 100vw;
 }
 
-.sidebarContainer {
+// SIDEBAR SECTION
+.sidebar-container {
   @include tools.flexing(column, none, flex-start, center);
   min-width: 14rem;
   width: 18vw;
   max-width: 12rem;
 
   & .sidebar {
-    transition: all 0.2s ease;
-    outline: 1px solid black;
-    @include tools.flexing(column, none, space-between, center);
-    background-color: tools.$cSidebarBg;
-    background-image: tools.$gSideBar;
-    @include tools.giveShadow(1);
     position: fixed;
     top: 0;
     bottom: 0;
+
+    @include tools.flexing(column, none, space-between, center);
+    width: 18vw;
     min-width: 14rem;
     max-width: 12rem;
-    width: 18vw;
-    //height: 100vh;
+
+    outline: 1px solid tools.$cSidebarBorder;
+    background-color: tools.$cSidebarBg;
+    background-image: tools.$gSideBar;
+    @include tools.giveShadow(1);
+    transition: all 0.2s ease;
+
     & header {
       @include tools.flexing(column, nowrap, space-between, center);
     }
+
     &.hidden {
-      min-width: unset;
       width: 2.6rem;
+      min-width: unset;
       border-radius: 0 0 60px 0;
+
       & .logo {
         visibility: hidden;
       }
+
       & nav {
         transform: translateX(-500px);
-        //visibility: hidden;
       }
     }
   }
 }
+
+// BURGER BUTTON SECTION
 .btn-menu {
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   visibility: hidden;
 }
+
+// LOGO SECTION
 .logo {
   @include tools.flexing(column, nowrap, center, center);
-  margin-top: 4vh;
-  max-width: 100%;
-  //height: 100px;
-  //width: 160px;
   height: 70px;
-  width: 112px;
+  width: 112px; // Default: (H)100px (W)160px
+  max-width: 100%;
+  margin-top: 4vh;
   padding: 0 4px;
+
   background-color: tools.$cLogo;
   border-radius: 21px;
   border: 2px solid tools.$cLogoBorder;
+
   &:hover {
-    transform: scale(1.4);
     @include tools.giveShadow(0);
     @include tools.giveShadow(4);
+    transform: scale(1.4);
   }
+
   &:active {
     @include tools.giveShadow(0);
     @include tools.giveShadow(5);
   }
 }
-.logoLink {
+
+.logo-link {
   font-family: 'Oleo Script Swash Caps', cursive;
   font-size: 2.3rem;
   text-decoration: none;
+  text-align: center;
+  font-weight: 900;
+
   background-image: tools.$gLogoText;
   background-size: 95%;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  text-align: center;
-  font-weight: 900;
 }
+
+// NAV MENU SECTION
 nav {
-  transition: all 0.1s ease;
-  padding: 1vh 1rem;
   padding: 0 1rem;
+  transition: all 0.1s ease;
+
   & ul {
     @include tools.flexing(column, nowrap, center, center);
     padding: 0;
     list-style: none;
   }
-  & li button {
-    font-family: 'Oswald', sans-serif;
-    border: 2px solid tools.$cDefaultBorder;
+
+  & button {
     margin: 2vh 1rem;
     padding: 1vh 0;
     width: 7rem;
+    font-family: 'Oswald', sans-serif;
+
+    text-align: center;
+
+    border: 2px solid tools.$cDefaultBorder;
     border-radius: 10px;
     background-image: tools.$gSideButton;
-    text-align: center;
+
     &:hover {
-      @include tools.giveShadow(1);
       position: relative;
       bottom: 5px;
       right: 5px;
+
+      @include tools.giveShadow(1);
+
       transition: bottom, right, 0.2s ease;
     }
+
     &:active {
       top: 0px;
       left: 0px;
-      transition: bottom, right, 0.1s ease;
+
       @include tools.giveShadow(0);
       @include tools.giveShadow(2);
+      transition: bottom, right, 0.1s ease;
     }
   }
 }
 
+// FOOTER SECTION
 footer {
   @include tools.flexing(row, none, space-between, center);
   margin-bottom: 3vh;
   padding: 0 0.2rem;
+
   font-size: 0.8rem;
+
   border-radius: 8px;
   border: 2px solid tools.$cFooterBorder;
   color: tools.$footerFont;
   background-color: tools.$cLogo;
+
   & .btn-font {
     margin: 0.2rem 0.3em 0.2rem 0;
-    border: 2px solid tools.$cDefaultBorder;
-    display: flex;
-    background-color: tools.$cFontBottonBg;
+
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: 600;
+
+    border: 2px solid tools.$cDefaultBorder;
+    background-color: tools.$cFontBottonBg;
+
     &:hover {
       border: 2px solid tools.$cFontButton;
       color: tools.$cFontButton;
@@ -175,22 +203,22 @@ footer {
     }
   }
   & p {
-    text-align: center;
     margin: 0.3em 0;
+    text-align: center;
   }
 }
 
-// BIG FONTS
-button.navButton.bigFontsBtns {
-  font-size: 1.4rem;
+// BIG FONTS SECTION
+button.nav-btn.big-fonts-btn {
   width: 9.5rem;
+  font-size: 1.4rem;
 }
 
-button.fontButtonActive {
+button.font-btn-active {
   border: 2px solid tools.$cFontButtonActive;
   color: tools.$cFontButtonActive;
 }
 
-footer.bigFontsFooter {
+footer.big-fonts-footer {
   font-size: 0.9rem;
 }
