--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 @media only screen and (min-width: 2440px) {
   main.big-fonts-main {
     font-size: calc(2.6rem + 0.32vw);
@@ -8,15 +8,22 @@
 @media only screen and (max-width: 768px), (orientation: portrait) {
   body main {
     width: 100vw;
-    padding-top: 18vh;
-    padding-bottom: 3vh;
+    padding-top: 5.5rem;
+    padding-bottom: 1.5rem;
   }
-  body main div.card {
+  body main .card {
     width: 95vw;
     padding: calc(1rem + 2.5vw);
     margin-bottom: 2rem;
   }
+  body main .image-card {
+    max-width: 95vw;
+  }
 }
+.hidden-caption {
+  display: none;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -25,8 +32,8 @@ main {
   width: 100vw;
   padding: 1vw;
   min-height: 100vh;
-  background-color: hsl(184deg, 6%, 81%);
   font-size: calc(0.8rem + 0.32vw);
+  background-color: hsl(184deg, 6%, 81%);
   /*   [ MODAL ] */
 }
 main h2,
@@ -35,71 +42,6 @@ main h4,
 main h5,
 main h6 {
   font-family: "Josefin Sans", sans-serif;
-}
-main div.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: calc(20rem + 27vw);
-  min-width: 20rem;
-  margin-bottom: 3rem;
-  background-color: hsl(55deg, 100%, 95%);
-  border-radius: 15px;
-  border: 2px solid black;
-  padding: 2%;
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
-}
-main div.card.image-container {
-  padding: 0;
-  background-color: transparent;
-  border: 1px solid black;
-  max-width: 50%;
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
-}
-main div.card.image-container img {
-  border-radius: inherit;
-}
-main div.card h2 {
-  color: hsl(86deg, 65%, 28%);
-  font-size: 170%;
-  text-align: center;
-}
-main div.card p {
-  font-family: "Play", sans-serif;
-  text-align: justify;
-  margin: 0 0 1em 0;
-}
-main div.card p.dropCaps::first-letter {
-  color: hsl(283deg, 34%, 40%);
-  float: left;
-  padding-top: 0.15em;
-  font-size: 2.5em;
-  line-height: 3em;
-  margin-right: 0.5rem;
-  font-weight: 800;
-}
-main .card.presentation div {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-}
-main .card.presentation div div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-main .card.presentation div div p {
-  margin: 0 0 0.8 em 0;
-}
-main .card.presentation .image-container {
-  margin: 0 1em 1em 0;
-  background-color: transparent;
-  border: 1px solid black;
-  max-width: 7rem;
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
 }
 main .title {
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
@@ -114,44 +56,124 @@ main .title .mainTitle {
 }
 main .title .mainTitle h1 {
   margin: 0.1rem 0;
+  text-align: center;
+  font-weight: 900;
+  font-family: "Oleo Script Swash Caps", cursive;
+  font-size: 200%;
   background-image: linear-gradient(-225deg, #c47d0c 0%, #eef4a1 38%, #dfbb45 50%, #eef4a1 68%, #c47d0c 100%);
   background-size: 95%;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  text-align: center;
-  font-weight: 900;
-  font-family: "Oleo Script Swash Caps", cursive;
-  font-size: 200%;
 }
-main .title .image {
-  background-color: transparent;
-  border: 1px solid black;
-  max-width: 10rem;
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
-}
-main .title .image img {
+main .image-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30rem;
+  min-width: unset;
+  margin-bottom: 3rem;
+  padding: 0;
+  border-radius: 15px;
   border: 2px solid black;
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+}
+main .image-card .image-container {
+  border-radius: inherit;
+}
+main .image-card .image-container .image {
+  border-radius: inherit;
+}
+main .card {
+  width: calc(20rem + 27vw);
+  min-width: 20rem;
+  margin-bottom: 3rem;
+  padding: 2%;
+  background-color: hsl(55deg, 100%, 95%);
+  border-radius: 15px;
+  border: 2px solid black;
+  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+}
+main .card .post-date {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 80%;
+  color: hsl(283deg, 34%, 40%);
+}
+main .card .compare {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+main .card .compare div {
+  width: 48%;
+}
+main .card .float {
+  max-width: 30vw;
+  margin-top: 0.3em;
+  margin-bottom: 1em;
+  border: 1px solid black;
+  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+  background-color: transparent;
+}
+main .card .float.portrait {
+  width: 20%;
+}
+main .card .float.landscape {
+  width: 40%;
+}
+main .card .float.left {
+  float: left;
+  margin-right: 1em;
+}
+main .card .float.right {
+  float: right;
+  margin-left: 1em;
+}
+main .card h2 {
+  font-size: 170%;
+  text-align: center;
+  font-weight: 600;
+  color: hsl(86deg, 65%, 28%);
+}
+main .card p {
+  margin: 0 0 1em 0;
+  font-family: "Play", sans-serif;
+  text-align: justify;
+  hyphens: auto;
+}
+main .card p.dropCaps::first-letter {
+  margin-right: 0.5rem;
+  padding-top: 0.15em;
+  color: hsl(283deg, 34%, 40%);
+  float: left;
+  font-size: 2.5em;
+  line-height: 3em;
+  font-weight: 800;
+}
+main .card li::marker {
+  color: hsl(283deg, 34%, 40%);
 }
 main.big-fonts-main {
   font-size: calc(1.6rem + 0.32vw);
 }
 main .modal-container {
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  opacity: 0;
   visibility: hidden;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
   background: rgba(0, 0, 0, 0.5);
 }
 main .modal {
+  padding: 0.7rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -159,45 +181,51 @@ main .modal {
   background-color: hsl(55deg, 100%, 95%);
   border-radius: 15px;
   border: 2px solid black;
-  padding: 0.5rem;
   transform: scale(0.1);
   transform: scale(1%);
   transition: transform 5.3s;
   transform: scale(100%);
-  /* & p {
-    color: var(--relaxr-almost-black);
-    font-size: 16px;
-    font-weight: var(--light);
-  } */
+}
+main .modal > div {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+main .modal > div .image-caption {
+  font-weight: 600;
+  padding-left: 0.5rem;
+}
+main .modal .image-container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 99%;
+  max-width: 97vw;
+  max-height: 97vh;
+}
+main .modal .image-container img {
+  border: 1px solid black;
+  max-height: 90vh;
+  margin-bottom: 0.2rem;
 }
 main .modal button {
-  font-family: "Oswald", sans-serif;
-  margin-left: 0.2rem;
+  margin-left: 0.33rem;
   height: 1.5em;
   width: 1.5em;
+  font-family: "Oswald", sans-serif;
+  font-size: 1.6rem;
   color: #dfbb45;
   background-color: hsl(283deg, 34%, 40%);
-  font-size: 1.6rem;
   border-radius: 5px;
   border: 1px solid hsl(284deg, 38%, 11%);
-  /* margin-top: 0.5%;
-  height: 2.5em;
-  width: 5em;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: var(--extra-bold);
-  color: var(--relaxr-white);
-  background-color: var(--relaxr-dark-blue);
-  &:hover {
-    background-color: var(--relaxr-yellow);
-    color: var(--relaxr-dark-blue);
-  } */
 }
 main .modal button:hover {
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
   position: relative;
   bottom: 5px;
   right: 5px;
+  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
 }
 main .modal button:active {
   box-shadow: inset 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
@@ -210,14 +238,6 @@ main .modal-open {
 main .modal-open .modal {
   transition: transform 0.2s ease;
   transform: scale(1);
-}
-main .modal-open .image-container {
-  width: 150%;
-  max-width: 93vw;
-  max-height: 93vh;
-}
-main .modal-open .image-container img {
-  max-height: 91vh;
 }
 main .modal-close .modal {
   transition: transform 0.5s ease;
