--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -2,7 +2,7 @@
 @import './normalize';
 @import './_common-mq';
 //fonts
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap');
 
 * {
