--- a/styles/sass/home.scss
+++ b/styles/sass/home.scss
@@ -2,7 +2,7 @@
 @import './_home-mq';
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 
 // headings
 h2,
@@ -13,81 +13,23 @@ h6 {
   @extend %headings !optional;
 }
 
+.hidden-caption {
+  display: none;
+}
+
 main {
   @include tools.flexing(column, none, flex-start, center);
   width: 100vw;
   padding: 1vw;
   min-height: 100vh;
-  background-color: tools.$cMainBg;
   font-size: calc(0.8rem + 0.32vw);
+  background-color: tools.$cMainBg;
 
   & %headings {
     font-family: 'Josefin Sans', sans-serif;
   }
 
-  & div.card {
-    @include tools.flexing(column, none, center, center);
-    width: calc(20rem + 3 * 9vw);
-    min-width: 20rem;
-    margin-bottom: 3rem;
-    background-color: tools.$cMainBlockBg;
-    border-radius: 15px;
-    border: 2px solid tools.$cDefaultBorder;
-    padding: 2%;
-    @include tools.giveShadow(1);
-    &.image-container {
-      padding: 0;
-      background-color: transparent;
-      border: 1px solid black;
-      max-width: 50%;
-      @include tools.giveShadow(1);
-      & img {
-        border-radius: inherit;
-      }
-    }
-    & h2 {
-      color: tools.$cTitle;
-      font-size: 170%;
-      text-align: center;
-    }
-
-    & p {
-      font-family: 'Play', sans-serif;
-      text-align: justify;
-      margin: 0 0 1em 0;
-      &.dropCaps::first-letter {
-        color: tools.$cFirstLetter;
-        float: left;
-        padding-top: 0.15em;
-        //top: 4em;
-        font-size: 2.5em;
-        line-height: 3em;
-        margin-right: 0.5rem;
-        font-weight: 800;
-      }
-    }
-  }
-
-  .card.presentation {
-    & div {
-      @include tools.flexing(row, none, center, flex-start);
-      & div {
-        @include tools.flexing(column, none, center, center);
-        p {
-          margin: 0 0 0.8 em 0;
-        }
-      }
-    }
-
-    & .image-container {
-      margin: 0 1em 1em 0;
-      background-color: transparent;
-      border: 1px solid black;
-      max-width: 7rem;
-      @include tools.giveShadow(1);
-    }
-  }
-
+  // TITLE SECTION
   & .title {
     @include tools.giveShadow(1);
     margin-bottom: 3rem;
@@ -95,34 +37,127 @@ main {
     background-color: tools.$cMainTitleBg;
     border: 2px solid tools.$cDefaultBorder;
     border-radius: 21px;
-    //@include tools.flexing(reverse, none, space-between, center);
+
     & .mainTitle {
       width: 15.5em;
 
       & h1 {
         margin: 0.1rem 0;
+        text-align: center;
+        font-weight: 900;
+        font-family: 'Oleo Script Swash Caps', cursive;
+        font-size: 200%;
         background-image: tools.$gLogoText;
         background-size: 95%;
         background-clip: text;
         -webkit-background-clip: text;
         color: transparent;
-        text-align: center;
-        font-weight: 900;
-        font-family: 'Oleo Script Swash Caps', cursive;
-        font-size: 200%;
+      }
+    }
+  }
+
+  .image-card {
+    // For cards that contains only images.
+    @include tools.flexing(column, none, center, center);
+    width: 30rem;
+    min-width: unset;
+    margin-bottom: 3rem;
+    padding: 0;
+    border-radius: 15px;
+    border: 2px solid tools.$cDefaultBorder;
+    @include tools.giveShadow(1);
+
+    & .image-container {
+      border-radius: inherit;
+
+      & .image {
+        border-radius: inherit;
+      }
+    }
+  }
+
+  & .card {
+    // GENERIC CARD
+    width: calc(20rem + 3 * 9vw);
+    min-width: 20rem;
+    margin-bottom: 3rem;
+    padding: 2%;
+    background-color: tools.$cMainBlockBg;
+    border-radius: 15px;
+    border: 2px solid tools.$cDefaultBorder;
+    @include tools.giveShadow(1);
+
+    .post-date {
+      font-family: 'Oswald', sans-serif;
+      font-weight: 700;
+      font-size: 80%;
+      color: tools.$cPostDate;
+    }
+
+    .compare {
+      // Used to put two images side by side for comparing purposes.
+      @include tools.flexing(row, none, space-between, center);
+
+      & div {
+        width: 48%;
       }
     }
 
-    & .image {
-      background-color: transparent;
-      border: 1px solid black;
-      max-width: 10rem;
+    .float {
+      // Floating images over the text. You can use the below classes to customize
+      // position and size.
+      max-width: 30vw;
+      margin-top: 0.3em;
+      margin-bottom: 1em;
+      border: 1px solid tools.$cMainBorder;
       @include tools.giveShadow(1);
-      & img {
-        border: 2px solid black;
-        @include tools.giveShadow(1);
-        //max-width: 10%;
+      background-color: transparent;
+
+      &.portrait {
+        width: 20%;
       }
+
+      &.landscape {
+        width: 40%;
+      }
+
+      &.left {
+        float: left;
+        margin-right: 1em;
+      }
+
+      &.right {
+        float: right;
+        margin-left: 1em;
+      }
+    }
+
+    & h2 {
+      font-size: 170%;
+      text-align: center;
+      font-weight: 600;
+      color: tools.$cTitle;
+    }
+
+    & p {
+      margin: 0 0 1em 0;
+      font-family: 'Play', sans-serif;
+      text-align: justify;
+      hyphens: auto;
+
+      &.dropCaps::first-letter {
+        margin-right: 0.5rem;
+        padding-top: 0.15em;
+        color: tools.$cFirstLetter;
+        float: left;
+        font-size: 2.5em;
+        line-height: 3em;
+        font-weight: 800;
+      }
+    }
+
+    & li::marker {
+      color: tools.$cBullet;
     }
   }
 
@@ -133,94 +168,87 @@ main {
   /*   [ MODAL ] */
   .modal-container {
     position: fixed;
-    @include tools.flexing(row, none, center, center);
-    opacity: 0;
-    visibility: hidden;
-    width: 100%;
-    height: 100vh;
     top: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
+    @include tools.flexing(row, none, center, center);
+    visibility: hidden;
     background: tools.$cModalBackground;
   }
+
   .modal {
+    padding: 0.7rem;
     @include tools.flexing(row, none, center, flex-start);
-    //z-index: 3;
     background-color: tools.$cMainBlockBg;
     border-radius: 15px;
     border: 2px solid tools.$cDefaultBorder;
-    padding: 0.5rem;
     transform: scale(0.1);
-    //width: 25em;
-    //height: 8em;
-    //background: var(--relaxr-white);
-    //overflow: hidden;
-    //border-radius: 5px;
     transform: scale(1%);
     transition: transform 5.3s;
     transform: scale(100%);
-    /* & p {
-      color: var(--relaxr-almost-black);
-      font-size: 16px;
-      font-weight: var(--light);
-    } */
+
+    & > div {
+      @include tools.flexing(column, wrap, center, center);
+
+      & .image-caption {
+        font-weight: 600;
+        padding-left: 0.5rem;
+      }
+    }
+
+    & .image-container {
+      @include tools.flexing(column, nowrap, center, flex-start);
+      width: 99%;
+      max-width: 97vw;
+      max-height: 97vh;
+
+      & img {
+        border: 1px solid tools.$cMainBorder;
+        max-height: 90vh;
+        margin-bottom: 0.2rem;
+      }
+    }
+
     & button {
-      font-family: 'Oswald', sans-serif;
-      margin-left: 0.2rem;
+      margin-left: 0.33rem;
       height: 1.5em;
       width: 1.5em;
+      font-family: 'Oswald', sans-serif;
+      font-size: 1.6rem;
       color: tools.$cLogoText3;
       background-color: tools.$cLogo;
-      font-size: 1.6rem;
       border-radius: 5px;
       border: 1px solid tools.$cLogoBorder;
+
       &:hover {
-        @include tools.giveShadow(1);
         position: relative;
         bottom: 5px;
         right: 5px;
+        @include tools.giveShadow(1);
       }
+
       &:active {
         @include tools.giveShadow(2);
         color: tools.$cLogoText2;
       }
-      /* margin-top: 0.5%;
-      height: 2.5em;
-      width: 5em;
-      border-radius: 5px;
-      font-size: 16px;
-      font-weight: var(--extra-bold);
-      color: var(--relaxr-white);
-      background-color: var(--relaxr-dark-blue);
-      &:hover {
-        background-color: var(--relaxr-yellow);
-        color: var(--relaxr-dark-blue);
-      } */
     }
   }
 
   .modal-open {
     opacity: 1;
     visibility: visible;
+
     & .modal {
       transition: transform 0.2s ease;
       transform: scale(1);
     }
-    & .image-container {
-      width: 150%;
-      max-width: 93vw;
-      max-height: 93vh;
-      & img {
-        max-height: 91vh;
-      }
-    }
   }
+
   .modal-close {
     & .modal {
       transition: transform 0.5s ease;
       transform: scale(0.1);
     }
-    //opacity: 0;
-    //visibility: hidden;
-    //transform: translateY(-1000%);
   }
 }
