--- a/styles/css/shared-main.css
+++ b/styles/css/shared-main.css
@@ -51,20 +51,28 @@ main .title {
   border: 2px solid black;
   border-radius: 21px;
 }
-main .title .mainTitle {
-  width: 15.5em;
-}
-main .title .mainTitle h1 {
+main .title .main-title {
   margin: 0.1rem 0;
-  text-align: center;
-  font-weight: 900;
-  font-family: "Oleo Script Swash Caps", cursive;
-  font-size: 200%;
-  background-image: linear-gradient(-225deg, #c47d0c 0%, #eef4a1 38%, #dfbb45 50%, #eef4a1 68%, #c47d0c 100%);
   background-size: 95%;
   background-clip: text;
+  background-image: linear-gradient(-225deg, #c47d0c 0%, #eef4a1 38%, #dfbb45 50%, #eef4a1 68%, #c47d0c 100%);
   -webkit-background-clip: text;
   color: transparent;
+}
+main .title .main-title h1 {
+  margin: 0;
+  padding: 1rem;
+  font-family: "Oswald", sans-serif;
+  text-align: center;
+  font-weight: 700;
+  font-size: 200%;
+}
+main .title .main-title.home-title {
+  width: 17.3em;
+  background-image: linear-gradient(-225deg, #c47d0c 0%, #eef4a1 38%, #dfbb45 50%, #eef4a1 68%, #c47d0c 100%);
+}
+main .title .main-title.home-title h1 {
+  font-family: "Oleo Script Swash Caps", cursive;
 }
 main .image-card {
   display: flex;
@@ -144,7 +152,7 @@ main .card p {
   text-align: justify;
   hyphens: auto;
 }
-main .card p.dropCaps::first-letter {
+main .card p.drop-caps::first-letter {
   margin-right: 0.5rem;
   padding-top: 0.15em;
   color: hsl(283deg, 34%, 40%);
@@ -178,6 +186,7 @@ main .modal {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  max-width: 97vw;
   background-color: hsl(55deg, 100%, 95%);
   border-radius: 15px;
   border: 2px solid black;
@@ -244,4 +253,4 @@ main .modal-close .modal {
   transform: scale(0.1);
 }
 
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=shared-main.css.map */
