--- a/styles/sass/shared-main.scss
+++ b/styles/sass/shared-main.scss
@@ -1,5 +1,5 @@
 @use './tools' as tools;
-@import './_home-mq';
+@import './shared-main-mq';
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
@@ -38,20 +38,27 @@ main {
     border: 2px solid tools.$cDefaultBorder;
     border-radius: 21px;
 
-    & .mainTitle {
-      width: 15.5em;
-
+    & .main-title {
+      margin: 0.1rem 0;
+      background-size: 95%;
+      background-clip: text;
+      background-image: tools.$gLogoText;
+      -webkit-background-clip: text;
+      color: transparent;
       & h1 {
-        margin: 0.1rem 0;
+        margin: 0;
+        padding: 1rem;
+        font-family: 'Oswald', sans-serif;
         text-align: center;
-        font-weight: 900;
-        font-family: 'Oleo Script Swash Caps', cursive;
+        font-weight: 700;
         font-size: 200%;
+      }
+      &.home-title {
+        width: 17.3em;
         background-image: tools.$gLogoText;
-        background-size: 95%;
-        background-clip: text;
-        -webkit-background-clip: text;
-        color: transparent;
+        & h1 {
+          font-family: 'Oleo Script Swash Caps', cursive;
+        }
       }
     }
   }
@@ -145,7 +152,7 @@ main {
       text-align: justify;
       hyphens: auto;
 
-      &.dropCaps::first-letter {
+      &.drop-caps::first-letter {
         margin-right: 0.5rem;
         padding-top: 0.15em;
         color: tools.$cFirstLetter;
@@ -180,6 +187,7 @@ main {
   .modal {
     padding: 0.7rem;
     @include tools.flexing(row, none, center, flex-start);
+    max-width: 97vw;
     background-color: tools.$cMainBlockBg;
     border-radius: 15px;
     border: 2px solid tools.$cDefaultBorder;
