--- a/styles/css/shared-main.css
+++ b/styles/css/shared-main.css
@@ -31,6 +31,7 @@ main {
   align-items: center;
   color: black;
   width: 100vw;
+  padding: 1vw;
   min-height: 100vh;
   font-size: calc(0.8rem + 0.32vw);
   background-color: hsl(184deg, 6%, 81%);
