--- a/styles/sass/shared-main.scss
+++ b/styles/sass/shared-main.scss
@@ -21,7 +21,7 @@ main {
   @include tools.flexing(column, none, flex-start, center);
   color: tools.$cMainFont;
   width: 100vw;
-  //padding: 1vw;
+  padding: 1vw;
   min-height: 100vh;
   font-size: calc(0.8rem + 0.32vw);
   background-color: tools.$cMainBg;
