--- a/styles/css/shared-main.css
+++ b/styles/css/shared-main.css
@@ -117,7 +117,7 @@ main .card .compare {
   align-items: center;
   margin-bottom: 1em;
 }
-main .card .compare div {
+main .card .compare picture {
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
   width: 49%;
 }
